// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Field /> UI snapshots renders with default props 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 22px;
}

.emotion-2 {
  position: relative;
}

.emotion-2 svg.radiance-field-input-icon {
  opacity: 0;
  position: absolute;
  top: 20px;
  right: 1rem;
  -webkit-transition: opacity 350ms;
  transition: opacity 350ms;
}

.emotion-4 {
  display: block;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  color: #BD200F;
  -webkit-transition: color 350ms,-webkit-transform 350ms;
  transition: color 350ms,transform 350ms;
}

.emotion-5 {
  color: #524D6E;
  font-size: 1rem;
  line-height: 1.75;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: #FFFFFF;
  border: 1px solid #EDEDF0;
  border-radius: 4px;
  color: #524D6E;
  -webkit-transition: border-color 350ms;
  transition: border-color 350ms;
  width: 100%;
  outline: none;
  margin-bottom: 2px;
  padding: 13px 2rem 13px 1rem;
}

.emotion-5:active,
.emotion-5:focus {
  outline: none;
  border-color: #332E54;
  box-shadow: 0px 0px 0px 2px #FFFFFF,0px 0px 0px 4px #332E54;
}

.emotion-5:active~.e1gqjikl5,
.emotion-5:focus~.e1gqjikl5 {
  max-height: 24px;
  opacity: 1;
  margin: 0.125rem 0 0 0;
}

.emotion-5::-webkit-input-placeholder {
  color: #C3C0CD;
}

.emotion-5::-moz-placeholder {
  color: #C3C0CD;
}

.emotion-5:-ms-input-placeholder {
  color: #C3C0CD;
}

.emotion-5::placeholder {
  color: #C3C0CD;
}

.emotion-5[disabled] {
  background-color: #EDEDF0;
  color: #C3C0CD;
  cursor: not-allowed;
  border: 1px solid #EDEDF0;
  box-shadow: none;
}

.emotion-7 {
  list-style-type: none;
  margin: 0;
}

<div
  class="emotion-0 emotion-1"
>
  <div
    class="emotion-2 emotion-3"
  >
    <svg
      class="radiance-field-input-icon emotion-4"
      fill="#BD200F"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Error Icon
      </title>
      <path
        clip-rule="evenodd"
        d="M14.6 6.78981C13.99 3.60981 11.21 1.30981 7.98003 1.30981C7.55003 1.30981 7.12003 1.34981 6.70003 1.42981C4.93003 1.76981 3.40003 2.77982 2.39003 4.26982C1.38003 5.75982 1.01003 7.55982 1.35003 9.32982C1.96003 12.5098 4.74003 14.8098 7.97003 14.8098C8.40003 14.8098 8.83003 14.7698 9.25003 14.6898C11.02 14.3498 12.55 13.3398 13.56 11.8498C14.57 10.3598 14.94 8.55981 14.6 6.78981ZM6.46003 0.199814C6.97003 0.109814 7.48003 0.0598145 7.98003 0.0598145C11.74 0.0598145 15.09 2.71982 15.83 6.54982C16.66 10.8898 13.82 15.0798 9.48003 15.9098C8.97003 15.9998 8.46003 16.0498 7.96003 16.0498C4.20003 16.0498 0.840032 13.3898 0.110032 9.55981C-0.719968 5.21981 2.12003 1.02981 6.46003 0.199814ZM7.32002 4.10986H8.73002V9.36986H7.32002V4.10986ZM7.15002 10.9399C7.15002 10.4599 7.54002 10.0999 8.03002 10.0999C8.52002 10.0999 8.91002 10.4599 8.91002 10.9399C8.91002 11.4299 8.52002 11.7999 8.03002 11.7999C7.54002 11.7999 7.15002 11.4299 7.15002 10.9399Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <input
      class="emotion-5 emotion-6"
    />
    <ul
      class="emotion-7 emotion-8"
    />
  </div>
</div>
`;

exports[`<Field /> UI snapshots renders with errorMessage, hintMessage and hideMessagesIcon props 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 22px;
}

.emotion-2 {
  position: relative;
}

.emotion-2 svg.radiance-field-input-icon {
  opacity: 0;
  position: absolute;
  top: 20px;
  right: 1rem;
  -webkit-transition: opacity 350ms;
  transition: opacity 350ms;
}

.emotion-2 svg.radiance-field-input-icon {
  opacity: 1;
}

.emotion-2 .e1gqjikl1,
.emotion-2 .emotion-5 {
  border-color: #BD200F;
}

.emotion-2 .e1gqjikl1:active,
.emotion-2 .emotion-5:active,
.emotion-2 .e1gqjikl1:focus,
.emotion-2 .emotion-5:focus {
  border-color: #BD200F;
  box-shadow: 0px 0px 0px 2px #FFFFFF,0px 0px 0px 4px #332E54;
}

.emotion-4 {
  color: #524D6E;
  font-size: 1rem;
  line-height: 1.75;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: #FFFFFF;
  border: 1px solid #EDEDF0;
  border-radius: 4px;
  color: #524D6E;
  -webkit-transition: border-color 350ms;
  transition: border-color 350ms;
  width: 100%;
  outline: none;
  margin-bottom: 2px;
  padding: 13px 2rem 13px 1rem;
}

.emotion-4:active,
.emotion-4:focus {
  outline: none;
  border-color: #332E54;
  box-shadow: 0px 0px 0px 2px #FFFFFF,0px 0px 0px 4px #332E54;
}

.emotion-4:active~.emotion-7,
.emotion-4:focus~.emotion-7 {
  max-height: 24px;
  opacity: 1;
  margin: 0.125rem 0 0 0;
}

.emotion-4::-webkit-input-placeholder {
  color: #C3C0CD;
}

.emotion-4::-moz-placeholder {
  color: #C3C0CD;
}

.emotion-4:-ms-input-placeholder {
  color: #C3C0CD;
}

.emotion-4::placeholder {
  color: #C3C0CD;
}

.emotion-4[disabled] {
  background-color: #EDEDF0;
  color: #C3C0CD;
  cursor: not-allowed;
  border: 1px solid #EDEDF0;
  box-shadow: none;
}

.emotion-6 {
  color: #706D87;
  font-size: 0.875rem;
  line-height: 1.71;
  -webkit-transition: all 350ms ease-in-out;
  transition: all 350ms ease-in-out;
  opacity: 0;
  max-height: 0;
}

.emotion-8 {
  list-style-type: none;
  margin: 0;
}

.emotion-10 {
  color: #706D87;
  font-size: 0.875rem;
  line-height: 1.71;
  color: #BD200F;
  line-height: 24px;
}

.emotion-10:last-of-type {
  margin: 0 0 0.125rem 0;
}

<div
  class="emotion-0 emotion-1"
>
  <div
    class="emotion-2 emotion-3"
  >
    <input
      class="emotion-4 emotion-5"
    />
    <div
      class="emotion-6 emotion-7"
    >
      hint message
    </div>
    <ul
      class="emotion-8 emotion-9"
    >
      <li
        class="emotion-10 emotion-11"
        style="opacity: 1; max-height: 48px; transition-duration: 350ms; transition-property: max-height, opacity; transition-timing-function: ease-in-out;"
        type="error"
      >
        <strong>
          Uh Oh!
        </strong>
         Type again
      </li>
    </ul>
  </div>
</div>
`;

exports[`<Field /> UI snapshots renders with label and labelFor props 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 22px;
}

.emotion-2 {
  color: #524D6E;
  font-size: 0.75rem;
  line-height: 1.67;
}

.emotion-4 {
  position: relative;
}

.emotion-4 svg.radiance-field-input-icon {
  opacity: 0;
  position: absolute;
  top: 20px;
  right: 1rem;
  -webkit-transition: opacity 350ms;
  transition: opacity 350ms;
}

.emotion-6 {
  display: block;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  color: #BD200F;
  -webkit-transition: color 350ms,-webkit-transform 350ms;
  transition: color 350ms,transform 350ms;
}

.emotion-7 {
  color: #524D6E;
  font-size: 1rem;
  line-height: 1.75;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: #FFFFFF;
  border: 1px solid #EDEDF0;
  border-radius: 4px;
  color: #524D6E;
  -webkit-transition: border-color 350ms;
  transition: border-color 350ms;
  width: 100%;
  outline: none;
  margin-bottom: 2px;
  padding: 13px 2rem 13px 1rem;
}

.emotion-7:active,
.emotion-7:focus {
  outline: none;
  border-color: #332E54;
  box-shadow: 0px 0px 0px 2px #FFFFFF,0px 0px 0px 4px #332E54;
}

.emotion-7:active~.e1gqjikl5,
.emotion-7:focus~.e1gqjikl5 {
  max-height: 24px;
  opacity: 1;
  margin: 0.125rem 0 0 0;
}

.emotion-7::-webkit-input-placeholder {
  color: #C3C0CD;
}

.emotion-7::-moz-placeholder {
  color: #C3C0CD;
}

.emotion-7:-ms-input-placeholder {
  color: #C3C0CD;
}

.emotion-7::placeholder {
  color: #C3C0CD;
}

.emotion-7[disabled] {
  background-color: #EDEDF0;
  color: #C3C0CD;
  cursor: not-allowed;
  border: 1px solid #EDEDF0;
  box-shadow: none;
}

.emotion-9 {
  list-style-type: none;
  margin: 0;
}

<div
  class="emotion-0 emotion-1"
>
  <label
    class="emotion-2 emotion-3"
    for="for-input-id"
  >
    Test Label
  </label>
  <div
    class="emotion-4 emotion-5"
  >
    <svg
      class="radiance-field-input-icon emotion-6"
      fill="#BD200F"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Error Icon
      </title>
      <path
        clip-rule="evenodd"
        d="M14.6 6.78981C13.99 3.60981 11.21 1.30981 7.98003 1.30981C7.55003 1.30981 7.12003 1.34981 6.70003 1.42981C4.93003 1.76981 3.40003 2.77982 2.39003 4.26982C1.38003 5.75982 1.01003 7.55982 1.35003 9.32982C1.96003 12.5098 4.74003 14.8098 7.97003 14.8098C8.40003 14.8098 8.83003 14.7698 9.25003 14.6898C11.02 14.3498 12.55 13.3398 13.56 11.8498C14.57 10.3598 14.94 8.55981 14.6 6.78981ZM6.46003 0.199814C6.97003 0.109814 7.48003 0.0598145 7.98003 0.0598145C11.74 0.0598145 15.09 2.71982 15.83 6.54982C16.66 10.8898 13.82 15.0798 9.48003 15.9098C8.97003 15.9998 8.46003 16.0498 7.96003 16.0498C4.20003 16.0498 0.840032 13.3898 0.110032 9.55981C-0.719968 5.21981 2.12003 1.02981 6.46003 0.199814ZM7.32002 4.10986H8.73002V9.36986H7.32002V4.10986ZM7.15002 10.9399C7.15002 10.4599 7.54002 10.0999 8.03002 10.0999C8.52002 10.0999 8.91002 10.4599 8.91002 10.9399C8.91002 11.4299 8.52002 11.7999 8.03002 11.7999C7.54002 11.7999 7.15002 11.4299 7.15002 10.9399Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <input
      class="emotion-7 emotion-8"
    />
    <ul
      class="emotion-9 emotion-10"
    />
  </div>
</div>
`;
